# rsblkid

./: Cargo.toml  Makefile  README.md  build.rs  flake.nix  test.nix
assets/diagrams/flowcharts/: fig01-probe-metadata-scanning-process.d2
scripts/: build-diagrams
src/: debug.rs  error.rs  ffi_utils.rs  lib.rs
src/cache/: cache_builder_error_enum.rs  cache_builder_struct.rs  cache_error_enum.rs  cache_struct.rs  device_struct.rs  entry_iter_error_enum.rs  entry_iter_struct.rs  mod.rs  operation_enum.rs  tag_iter_error_enum.rs  tag_iter_struct.rs
src/core/: mod.rs
src/core/device/: device_number_struct.rs  id_struct.rs  label_struct.rs  mod.rs  name_struct.rs  offset_struct.rs  size_struct.rs  tag_enum.rs  tag_name_enum.rs  (+2 more)
src/probe/: filter_enum.rs  fs_property_enum.rs  io_hint_struct.rs  mod.rs  partition_iter_struct.rs  partition_scanning_option_enum.rs  partition_struct.rs  partition_table_struct.rs  probe_builder_error_enum.rs  probe_builder_struct.rs  probe_error_enum.rs  probe_struct.rs  scan_result_enum.rs  tag_iter_struct.rs  topology_error_enum.rs  topology_struct.rs
tests/: README.md  probe.rs
tests/common/: macros.rs  mod.rs
web-snapshots/: README.md
web-snapshots/disk/: cylinder-head-sector-addressing.html
web-snapshots/filesystems/: io-limits-block-sizes-alignment-and-io-hints.html  what-is-a-filesystem-s-magic-number.html  what-is-a-superblock.html
web-snapshots/fs/: GPT-partition-type-guid.html  design-of-the-fat-file-system.html  journaling-file-system.html  logical-block-addressing.html
web-snapshots/linux/: maximum-length-of-a-file-path.html
web-snapshots/rust/: build-a-rust-api-with-the-builder-pattern.html  convert-vec-T-into-C-friendly-mut-T.html  how-to-combine-two-orderings.html  initialize-logger-for-integration-tests.html  passing-vec-string-to-array-of-char-array-in-c.html  rust-conversions.html  rust-equality-and-ordering.html  using-c-libraries-in-rust.html  wrapping-unsafe-c-libraries.html
web-snapshots/standards/: MBR-partition-types-list-of-partition-identifiers.html
web-snapshots/udev/: adding-events-to-udev-event-queue.html  how-does-udev-uevent-work.html
(+27 files in other folders)
